# talk2dom

./: .env.sample  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh.md  deploy_k8s.sh  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt  start_api.sh
.github/workflows/: rc.yml  release.yaml  test.yaml
alembic/: env.py
alembic/versions/: 03cb3994f22a_add_action_column_to_ui_locator_cache.py  2a4e7b9c1d2f_add_api_usage_user_indexes.py  5c1a7e3d9b20_add_project_router_supporting_indexes.py  6975441017a7_update_project_id_in_cache_table.py  8f3c1b2a9d4e_add_ui_locator_cache_project_indexes.py  9d2a4b6e1c11_add_projects_api_call_count_cache.py  c3d9e5f7a2b4_add_users_is_admin.py  eb87d2e87634_update_project_id_in_api_usage_table.py
charts/talk2dom-api/: Chart.yaml
charts/talk2dom-api/templates/: deployment.yaml  ingress.yaml  service.yaml
demo/: chain.py
docs/: CNAME  index.html
scripts/: clean_api_usage.py
talk2dom/: __init__.py  agent.py  chain.py  cli.py  core.py  html_utils.py
talk2dom/api/: deps.py  limiter.py  main.py  schemas.py  stripe_service.py
talk2dom/db/: cache.py  cleanup.py  init.py  models.py  session.py
talk2dom/prompts/: agent_prompt.txt  locator_prompt.txt  validator_prompt.txt
talk2dom/templates/: verify_failed.html  verify_success.html
tests/: aa.py  conftest.py  test_chain.py  test_core.py
tests/api/: test_deps.py  test_limiter.py  test_schemas.py  test_stripe_service.py
tests/db/: test_cache.py  test_cache_redis.py  test_cleanup.py  test_init_db.py  test_models.py
(+47 files in other folders)
